--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-seaborn
-matplotlib
-pandas
-numpy
-streamlit
-Babel
+matplotlib==3.10.1
+numpy==2.2.3
+pandas==2.2.3
+protobuf==6.30.1
+seaborn==0.13.2
+streamlit==1.30.0
