--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+Babel==2.17.0
 matplotlib==3.10.1
 numpy==2.2.3
 pandas==2.2.3
 protobuf==6.30.1
 seaborn==0.13.2
-streamlit==1.30.0
+streamlit==1.43.2
